# Hands_on_exercises

cuda/: conv3x3_padding1.cu  conv3x3_stride1.cu  matrix_multiplication.cu  matrix_multiplication_tiling.cu  vector_addition_pinnedmemory.cu  vector_addition_unifiedmemory.cu
cuda/grayscale/: CMakeLists.txt  main.cu
cuda/image_flipping_vertical/: CMakeLists.txt  main.cu
cuda/rgb_conversion/: CMakeLists.txt  main.cu
simd/: dot_product_padding_simd_scalar.cpp  matrix_transpose_simd_scalar.cpp  matrix_transpose_simd_vs_scalar.cpp
